# matematicandoetepimr

./: .gitignore  Procfile  README.md  gunicorn.conf.py  pyproject.toml  wsgi.py
matematicando/: __init__.py  config.py
matematicando/routes/: api_bp.py  contacts_bp.py  tools_bp.py
matematicando/static/js/home/: etepimr-slider.js  main-slider.js  responsive-header.js  smooth-scroll.js
matematicando/static/js/materials/: materials-page-logic.js
matematicando/static/styles/: contacts.css  global.css  home.css  materials-l2.css  materials.css  tools.css
matematicando/templates/: 404.html  contacts.html  home.html  materials-l2.html  materials-lv2.html  materials.html  tools.html
matematicando/views/: home_bp.py  materials_bp.py
tests/: conftest.py  test_app.py  test_routes.py
