[tool.poetry]
name = "matematicando"
version = "0.1.0"
description = ""
authors = ["fiixed <null>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.85.0"
google = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
