[tool.poetry]
name = "matematicando"
version = "0.1.0"
description = ""
authors = ["fiixed <null>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.85.0"
google = "^3.0.0"
pip = "^23.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
